Upgrade java 22